--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	background: url("./images/city.jpg") no-repeat;
+	background: url("./images/blue.jpg") no-repeat;
 	background-size: cover;
 }
 .box{
