--- a/style.css
+++ b/style.css
@@ -45,9 +45,16 @@ table{
 
 .box_head h5{
      font-size: 25px;
-     letter-spacing: 2px;
+     letter-spacing: 1px;
      font-weight: 100;
 }
+
+.box_head h6{
+     font-size: 20px;
+     letter-spacing: 1px;
+     font-weight: 100;
+}
+
 
 .box_head p{
      text-align: center;
