--- a/style.css
+++ b/style.css
@@ -82,4 +82,50 @@ ul{
 
 .box_head li a:hover{
 	color: #b9b9b9;
+
 }
+
+
+.lab_head{
+        width: 500px;
+        background: rgba(0,0,0,0.0);
+        text-align: center;
+        margin: auto;
+        color: white;
+	font-size: 20px;
+        font-family: 'Century Gothic',sans-serif;
+}
+
+
+.lab_head h6{
+     font-size: 20px;
+     letter-spacing: 1px;
+     font-weight: 100;
+}
+
+
+.lab_head p{
+      text-align: center;
+      font-size: 20px;
+ }
+
+.lab_head li{
+    display: inline-block;
+    margin 6px;
+    letter-spacing: 1px;
+    list-style: none;
+}
+
+.lab_head li a{
+         color: white;
+         text-decoration: none;
+         font-size: 20px;
+	 letter-spacing: 1px
+         transition: all ease-in-out 250ms;
+ }
+
+ .lab_head li a:hover{
+         color: #b9b9b9;
+
+ }
+
