--- a/kablab/podcast/style.css
+++ b/kablab/podcast/style.css
@@ -5,12 +5,6 @@ body{
 	background-size: cover;
 }
 
-
-table{
-	border-spacing: 15px;
-}	
-
-
 .box_head{
 	width: 500px;
 	background: rgba(0,0,0,0.0);
@@ -74,10 +68,10 @@ ul{
 }
 
 .box_head li a{
-	color: white;
-	text-decoration: none;
-	font-size: 20px;
-	transition: all ease-in-out 250ms;
+    color: #ADD8E6; 
+    text-decoration: none;
+    font-size: 20px;
+    transition: all ease-in-out 250ms;
 }
 
 .box_head li a:hover{
@@ -87,45 +81,68 @@ ul{
 
 
 .lab_head{
-        width: 500px;
-        background: rgba(0,0,0,0.0);
-        text-align: center;
-        margin: auto;
-        color: white;
-	font-size: 20px;
-        font-family: 'Century Gothic',sans-serif;
+       width: 800px;
+       background: rgba(0,0,0,0.0);
+       text-align: left;
+       margin: auto;
+       color: white;
+       font-size: 18px;
+       font-family: 'Century Gothic',sans-serif;
 }
 
-
-.lab_head h6{
-     font-size: 20px;
-     letter-spacing: 1px;
-     font-weight: 100;
-}
+.lab_head table{
+	border-spacing: 1px;
+}	
 
 
 .lab_head p{
-      text-align: center;
-      font-size: 20px;
+    text-align: left;
+    font-size: 20px;
+    letter-spacing: 1px;
  }
 
 .lab_head li{
-    display: inline-block;
-    margin 6px;
+    margin 12px;
     letter-spacing: 1px;
-    list-style: none;
+    list-style-position: inside;
 }
+
+
 
 .lab_head li a{
          color: white;
          text-decoration: none;
-         font-size: 20px;
+         font-size: 18px;
 	 letter-spacing: 1px
          transition: all ease-in-out 250ms;
  }
 
  .lab_head li a:hover{
          color: #b9b9b9;
-
+	 text-decoration: none;
+	 font-size: 18px;
+	 letter-spacing: 1px;
+	 transition: all ease-in-out 250ms;
  }
 
+ .lab_head table a{
+     color: #ADD8E6; 
+     text-decoration: none;
+     font-size: 18px;
+     letter-spacing: 1px;
+     transition: all ease-in-out 250ms;
+ }
+
+.lab_head table a:hover{
+    color: #b9b9b9;
+    text-decoration: none;
+    font-size: 18px;
+    letter-spacing: 1px;
+    transition: all ease-in-out 250ms;
+}
+ 
+.lab_head h5{
+     font-size: 18px;
+     letter-spacing: 1px;
+     text-align: left;
+}
