--- a/kablab/style.css
+++ b/kablab/style.css
@@ -5,12 +5,6 @@ body{
 	background-size: cover;
 }
 
-
-table{
-	border-spacing: 1px;
-}	
-
-
 .box_head{
 	width: 500px;
 	background: rgba(0,0,0,0.0);
@@ -74,10 +68,10 @@ ul{
 }
 
 .box_head li a{
-	color: white;
-	text-decoration: none;
-	font-size: 20px;
-	transition: all ease-in-out 250ms;
+    color: #ADD8E6; 
+    text-decoration: none;
+    font-size: 20px;
+    transition: all ease-in-out 250ms;
 }
 
 .box_head li a:hover{
@@ -96,11 +90,15 @@ ul{
        font-family: 'Century Gothic',sans-serif;
 }
 
+.lab_head table{
+	border-spacing: 1px;
+}	
+
 
 .lab_head p{
-    margin 12 px;
     text-align: left;
-      font-size: 18px;
+    font-size: 20px;
+    letter-spacing: 1px;
  }
 
 .lab_head li{
@@ -108,6 +106,7 @@ ul{
     letter-spacing: 1px;
     list-style-position: inside;
 }
+
 
 
 .lab_head li a{
@@ -120,15 +119,30 @@ ul{
 
  .lab_head li a:hover{
          color: #b9b9b9;
-
+	 text-decoration: none;
+	 font-size: 18px;
+	 letter-spacing: 1px;
+	 transition: all ease-in-out 250ms;
  }
 
-39.box_head h5{
-     font-size: 20px;
+ .lab_head table a{
+     color: #ADD8E6; 
+     text-decoration: none;
+     font-size: 18px;
+     letter-spacing: 1px;
+     transition: all ease-in-out 250ms;
+ }
+
+.lab_head table a:hover{
+    color: #b9b9b9;
+    text-decoration: none;
+    font-size: 18px;
+    letter-spacing: 1px;
+    transition: all ease-in-out 250ms;
+}
+ 
+.lab_head h5{
+     font-size: 18px;
      letter-spacing: 1px;
      text-align: left;
 }
-
-
-
- 
